--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <div class="bg-gray-800 p-8 rounded-2xl shadow-2xl max-w-lg w-full">
         
         <!-- Form Heading -->
-        <h1 class="text-3xl font-bold text-center text-white mb-6">Express your share to me.</h1>
+       <h1 class="text-3xl font-bold text-center text-white mb-6">Hello! I am Sadman.</h>
+        <h2 class="text-3xl font-bold text-center text-white mb-6">Share your feelings with me.</h2>
+ 
 
         <!-- Form Itself -->
         <form id="contactForm" class="space-y-6">
@@ -111,3 +113,4 @@
 
 </body>
 </html>
+
